[tool.poetry]
name = "hmt"
version = "0.0.1"
description = "Command line utility that shows a shift in time in human-readable format"
authors = ["qwlltrm <140437477+qwlltrm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
typer = "^0.7.0"
arrow = "^1.2.3"
dateparser = "^1.1.8"
rich = "^13.3.4"

[tool.poetry.scripts]
hmt = "hmt.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"




